--- a/SERVER/UNIT 4/ASSIGMENT 14/Acme/GesPresta/CSS/LendingStyleSheet.css
+++ b/SERVER/UNIT 4/ASSIGMENT 14/Acme/GesPresta/CSS/LendingStyleSheet.css
@@ -118,3 +118,15 @@ button {
     width: 100%; /* Hacer que los botones ocupen el 100% del ancho */
     padding: 0.5em; /* Espaciado interno */
 }
+
+.validation {
+    display: block;
+    margin-top: 0px;
+    gap: 20px;
+    margin-top: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-content: flex-start;
+}
