--- a/INTERFACES/ASSIGMENT 3/bloques.css
+++ b/INTERFACES/ASSIGMENT 3/bloques.css
@@ -5,59 +5,57 @@ html {
     }
     
 *, *:before, *:after {
-
 box-sizing: inherit;
 }
 
-body {
-    width: 100%;
-    margin: 0;
+* {
+    margin: 3px;
+    padding-block: 3px;
+    border-radius: 10px;
+}
+
+main {
+    display: flex;
+    height: 300px;
 }
 
 nav {
     background-color: violet;
     text-align: center;
-    padding: 20px;
-    margin: 20px;
-    border-radius: 20px;
+    padding: 6px;
+}
+
+article{
+    width: 70%;
 }
 
 header {
     background-color: greenyellow;
-    width: calc(100% - 30%);
-    height: 150px;
-    padding: 20px;
-    margin: 20px;
-    border-radius: 20px;
+    height: calc(100% - 70%);
+    padding: 12px;
+    text-align: left;
+}
+
+section {
     float: left;
+    width: calc(50% - 16px);
+    height: calc(100% - 30% - 12px);
+    background-color: rgb(195, 104, 218);
+    margin-left: 6px;
+    padding-top: 12px;
+    text-align: center;
 }
 
 aside {
     background-color: rgb(192, 65, 61);
-    width: calc(100% - 76%);
-    height: 450px;
-    padding: 20px;
-    margin: 10px;
-    border-radius: 20px;
-    display: flex;
+    width: calc(30% - 24px);
+    padding-top: 12px;
     text-align: center;
 }
 
-section {
-    margin: 20px;
-    float: left;
-    width: calc(100% - 70%);
-    height: 200px;
-    background-color: rgb(195, 104, 218);
-    padding: 20px;
-    border-radius: 20px;
-    text-align: center;
-}
 
 footer {
     background-color: rgb(228, 228, 63);
     text-align: center;
-    padding: 20px;
-    border-radius: 20px;
-    margin: 30px 20px 20px 20px;
+    padding: 6px;
 }
