--- a/INTERFACES/ASSIGMENT 3/insignias.css
+++ b/INTERFACES/ASSIGMENT 3/insignias.css
@@ -15,23 +15,23 @@ article {
   width: calc(100% - 60px);
 }
 
-span {
-  height: 20px;
-  width: 20px;
-  background-color: #dc3545;
-  border-radius: 50%;
-  display: inline-block;
-  align-content: center;
-  color: white;
-  font-weight: 700;
-}
-
 button {
   border-radius: 20px;
   border: 0px;
   padding: 5px 15px;
   font-weight: 700;
   color: white;
+}
+
+button::after {
+  content:"4";
+  height: 15px;
+  width: 15px;
+  background-color: #dc3545;
+  border-radius: 100%;
+  display: inline-block;
+  color: white;
+  font-weight: 700;
 }
 
 button:nth-child(1) {
@@ -48,6 +48,9 @@ button:nth-child(3) {
 
 button:nth-child(4) {
   background-color: #dc3545;
+
+  /* OCULTAMOS ESTE BOTON */
+  visibility: hidden;
 }
 
 button:nth-child(4) span {
