--- a/INTERFACES/ASSIGMENT 2/tarjeta.css
+++ b/INTERFACES/ASSIGMENT 2/tarjeta.css
@@ -6,56 +6,69 @@ html {
 *:before,
 *:after {
   box-sizing: inherit;
+
+  font-weight: bolder;
+  color:#FEFEFE;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
 }
 
 body {
-  justify-content: center;
-  align-content: center ;
-  align-self: center;
-  display: flex;
-}
-
-main {
   height: 90dvh;
   width: 90dvw;
 
-  border: 5px solid black;
-  border-radius: 30px;
+  /* ESTO ES PARA CENTRARLO BIEN */
+  justify-content: center;
+  align-content: center;
+  align-self: center;
+  margin: 0px 40px;
+}
+
+main {
+  /* ESTO POR LOS ERRORES PRODUCIDOS, QUE VIMOS EN CLASE */
+  overflow: clip;
+
+  /* APLICAMOS BORDE A TODO EL ELEMENTO MAIN */
+  border: 0.35em solid #FEFEFE;
+  border-radius: 2em;
 }
 
 header {
-  background-color: cyan;
+  background-color:#09090B;
   height: calc(100% - 80%);
-  padding: 50px 25px;
+  padding: 0.5em 0.5em;
+
+  font-size: 40pt;
 }
 
 section {
   display: flex;
   height: calc(100% - 40%);
-  
-    article {
-      background-color: red;
-      width: calc(100% - 40%);
-      padding: 50px 25px;
-    }
-    
-    aside {
-        width: calc(100% - 60%);
-    }
+  border-top: 0.25em solid #FEFEFE;
+  border-bottom: 0.25em solid #FEFEFE;
 
-    aside * {
-        margin: 0px;
-        padding: 0px;
-        width: 100%;
-        height: 100%;
-    }
-    aside figure img{
-      object-fit: contain;
-    }
+  article {
+    background-color: #18181B;
+    width: calc(100% - 40%);
+    padding: 1em 2em;
+  }
+
+  aside {
+    width: calc(100% - 60%);
+  }
+
+  aside * {
+    margin: 0px;
+    padding: 0px;
+    width: 100%;
+    height: 100%;
+  }
+  aside figure img {
+    object-fit: contain;
+  }
 }
 
 footer {
-  background-color: yellow;
+  background-color: #09090B;
   height: calc(100% - 80%);
-  padding: 50px 25px;
+  padding: 2em 2.5em;
 }
